<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Me &amp; Detroit</string>
    <string name="archive">Archive</string>
    <string name="categories">Categories</string>
    <string name="contact">Contact</string>
    <string name="main">Me in Motor City</string>
    <string name="entry"></string>
    <string name="progressMsg">Loading &#8230;</string>
    <string name="latest">Latest</string>
    <string name="nodata"></string>
    <string name="progressTitle"/>
    <string name="listTitle"/>
    <string name="sendMail">Send mail &#8230;</string>
    <string name="noConnection">No Internet Connection</string>
    <string name="noConnectionClose">Close</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="share">Share</string>
    <string name="comment">Comment</string>
    <string name="update">Update App</string>
    <string name="updateFailure">Update Error</string>
    <string name="noupdate">You are up-to-date</string>
    <string name="checkUpdate">Check for update</string>
    <string name="appContact">Contact</string>
    <string name="service_name">Sync Me &amp; Detroit</string>

</resources>
